# src/routes/index.ts
@@ -35,6 +35,93 @@ router.get('/login', async (req, res) => {
     }
 });
 
+// router.get('/bcsc', async (req, res) => {
+//     try {
+//         if (req.session?.user) {
+//             res.redirect(`${process.env.FE_APP_URL}`);
+//         } else {
+//             const authUrl = await getAuthorizationUrl({
+//                 identity_provider: 'bcsc',
+//             });
+//             res.redirect(authUrl);
+//         }
+//     } catch (err) {
+//         if (err instanceof Error) {
+//             logger.error(err.message);
+//             res.json({ success: false, error: err.message || err });
+//         }
+//     }
+// });
+
+// // BCSC Callback; performs UserInfo request
+// router.get('/userinfo', async (req, res) => {
+//     try {
+//         const { code } = req.query;
+
+//         // Ensure code is a string
+//         if (!code || Array.isArray(code)) {
+//             throw new Error('Authorization code is missing or invalid');
+//         }
+
+//         const authorizationCode = code as string;
+
+//         // Step 1: Exchange the authorization code for tokens
+//         const tokenResponse = await fetch(
+//             `${process.env.CSS_DOMAIN_NAME_URL}/token`,
+//             {
+//                 method: 'POST',
+//                 headers: {
+//                     'Content-Type': 'application/x-www-form-urlencoded',
+//                 },
+//                 body: new URLSearchParams({
+//                     grant_type: process.env.OIDC_GRANT_TYPE || '',
+//                     client_id: process.env.BCSC_OIDC_CLIENT_ID || '',
+//                     client_secret: process.env.BCSC_OIDC_CLIENT_SECRET || '',
+//                     code: authorizationCode,
+//                     redirect_uri: `${process.env.BE_APP_URL}/userinfo`, // Must match the original redirect URI
+//                 }),
+//             },
+//         );
+
+//         const tokenData = await tokenResponse.json();
+
+//         if (!tokenData.access_token) {
+//             throw new Error('Token exchange failed');
+//         }
+
+//         // Step 2: Use the access token to request user info
+//         const userInfoResponse = await fetch(
+//             `${process.env.CSS_DOMAIN_NAME_URL}/userinfo`,
+//             {
+//                 headers: {
+//                     Authorization: `Bearer ${tokenData.access_token}`,
+//                 },
+//             },
+//         );
+
+//         const userInfo = await userInfoResponse.json();
+
+//         /*
+//         userInfo.address.street_address
+//         userInfo.address.locality
+//         userInfo.address.region
+//         */
+//         console.log(userInfo); // Logs user information
+//         // const userAddress = `${userInfo.address.street_address} ${userInfo.address.locality}, ${userInfo.address.region}`;
+
+//         res.json({
+//             success: true,
+//             token: tokenData.access_token,
+//             refreshToken: tokenData.refresh_token,
+//         });
+//     } catch (err) {
+//         if (err instanceof Error) {
+//             logger.error(err.message);
+//             res.json({ success: false, error: err.message || err });
+//         }
+//     }
+// });
+
 // Callback; Authorization Response
 // see https://datatracker.ietf.org/doc/html/rfc6749#section-4.1.2
 router.get('/oauth', async (req, res) => {
